--- a/website/Presentation/presentation.qmd
+++ b/website/Presentation/presentation.qmd
@@ -1,5 +1,5 @@
 ---
-title: "The effect of temperature-induced health variation on economics"
+title: "Temperature-induced health variation effects on individual tradeoff"
 author: "Paulo Gugelmo Cavalheiro Dias"
 date: today
 institute: "Sciences Po"
@@ -57,182 +57,37 @@ the economy through health?*
 ## Literature{#literature .smaller} 
 
 - Climate economics: 
+    - Burke, Hsiang, Miguel, 2013: Quantifying the Influence of Climate on Human Conflict
     - Burke, Hsiang, Miguel, 2015: Global non-linear effect of temperature on economic production
     - Hsiang, 2016: Climate Econometrics
     - Carleton et al., 2022: Valuing the Global Mortality Consequences of Climate Change Accounting for Adaptation Costs and Benefits
+
+$\rightarrow$ global impact, beginning of adaptation, developing countries.
 
 - Health economics 
     - Capatina, 2015: Life-cycle effects of health risk
     - De Nardi, 2019: Lifetime costs of bad health
 
+$\rightarrow$ lifetime effect, tradeoff with health investment.
+
 Literature gap: climate **and** health effect in **industrialized** context.
 
 ## Research strategy {.smaller}
 
-1. Environment: 
+1. Economic model: 
+    - Reduced form, focus on lifetime individual decisions,
+    - Simple features,
+    - Policy functions: consumption, labor, savings.
+
+2. Environment: 
     - Empiry-based,
     - Demographic and health response to temperature,
     - _Ceteris Paribus_.
-
-2. Economic model: 
-    - Simple features,
-    - Policy functions: consumption, labor, savings.
 
 3. Temperature path comparison: 
     - Comparison of economic outcome for different temperature paths,
     - Special focus on lifetime income,
     - Historical (0 to 0.5 °C), Optimistic (0.5 to 2), Intermediate (to 3) and Pessimistic (to 4) scenarios.
-
-# Setting
-
-## Formal description{#formal_description}
-
-At each period, agents draw health $H_{t}$ and living status $L_{t}$: 
-
-\begin{equation}\tag{1}
-  H_t \sim f_h(\mathcal{H}_{t-1}, \mathcal{W}_t)
-\end{equation}
-\begin{equation}\tag{2}
-  L_t \sim \mathcal{B}(p_t)\text{ | } p_{t}\equiv p_{t}(\mathcal{H}_t, \mathcal{W}_t)
-\end{equation}
-
-We can also define the two history vectors:
-\begin{equation}\tag{3}
-  \mathcal{H}_t \equiv (H_1, H_2, \dots, H_t)
-\end{equation}
-\begin{equation}\tag{4}
-  \mathcal{W}_t \equiv (W_1, W_2, \dots, W_t)
-\end{equation}
-
-[More on underlying assumptions.](#framework_assumptions)
-
-## Data 
-
-::: {.columns}
-
-::: {.column width="50%"}
-![Distribution of Health status across years, in the HRS data.](resources/description_HRS.png){width=100%}
-:::
-
-::: {.column width="50%"}
-![Average annual temperature and its 95% confidence interval, in the Berkeley data.](resources/description_Berkeley.png){width=100%}
-:::
-
-:::
-
-# Estimation method
-
-## History Simplification
-
-The general relationships: 
-
-\begin{equation}\tag{1}
-  H_t \sim f_h(\mathcal{H}_{t-1}, \mathcal{W}_t)
-\end{equation}
-\begin{equation}\tag{2}
-  L_t \sim \mathcal{B}(p_t)\text{ | } p_{t}\equiv p_{t}(\mathcal{H}_t, \mathcal{W}_t)
-\end{equation}
-
-become:
-
-\begin{equation}\tag{1.1}
-  H_t \sim f_h({H}_{t-1}, {T}_t)
-\end{equation}
-
-\begin{equation}\tag{2.1}
-  L_t \sim \mathcal{B}(p_t)\text{ | } p_{t}\equiv p_{t}({H}_t, {T}_t)
-\end{equation}
-
-## Health Transition {#health_transition}
-
-Sample space of Health: 
-$\Omega(H_{t}) \equiv [\![1,5]\!]$
-
-Ordered Multinomial Logit Model
-
-\begin{equation}\tag{1.1}
-  H_t \sim f_h({H}_{t-1}, {T}_t)
-\end{equation}
-
-Let $X_{H} \equiv (Age_{t}, T_{t}, Age_{t}\times T_{t}, H_{t-1})^{T}$
-
-\begin{equation}\tag{1.2}
-  \widehat{H_{t}} \sim \Lambda_{O}(\widehat{\beta_H}\cdot X_{H})
-\end{equation}
-
-[More about it](#ordered_multinomial_logit_regression_details)
-
-## Living Status{#living_status}
-
-Sample space of living status: 
-$\Omega(L_{t}) \equiv \{0,1\}$
-
-Logistic regression
-
-\begin{equation}\tag{2.1}
-  L_t \sim \mathcal{B}(p_t)\text{ | } p_{t}\equiv p_{t}({H}_t, {T}_t)
-\end{equation}
-
-Let $X_{L} \equiv (H_{t},Age_{t},T_{t},H_{t}\times Age_{t} \times T_{t})^{T}$
-
-\begin{equation}\tag{2.2}
-  \widehat{p_t} = \Lambda  (\widehat{\beta_L}\cdot X_{L})
-\end{equation}
-
-[More about it](#logit_model_details)
-
-## Health Proxy{#health_proxy}
-
-In the submitted version, health proxy is defined as:
-$HP_{i,t} = \text{HighBP}_{i,t} + \text{Lung}_{i,t} + \text{Heart}_{i,t} + \text{Stroke}_{i,t}$
-and its estimate, $\widehat{HP_{i,t}^{OLS}}$ ($\widehat{H^{I}_{i,t}}$ in text)
-leads to: 
-
-\begin{equation}\tag{1.4}
-  \widehat{H_{i,t}^{HP}} = \Lambda_{0} \left( \widehat{\beta_0} +
-    \widehat{\beta_{H}} \cdot H_{i,t} +
-    \widehat{\beta_{HP}} \cdot \widehat{HP_{i,t}^{OLS}} \right)
-\end{equation}
-
-\begin{equation}\tag{2.4}
-  \widehat{p_{i,t}} = \Lambda \left( \widehat{\beta_0} +
-    \widehat{\beta_{H}} \cdot H_{i,t} +
-    \widehat{\beta_{HP}} \cdot \widehat{HP_{i,t}^{OLS}} \right)
-\end{equation}
-
-[More about it](#health_proxy_details)
-
-# Estimation results
-
-## Health Transition {.scrollable}
-
-```{=html}
-<div style="display: flex; flex-wrap: wrap; justify-content: center;">
-  <iframe src="resources/transition_from_Excellent.html" width="49%" height="500px" frameborder="0"></iframe>
-  <iframe src="resources/transition_from_Very Good.html" width="49%" height="500px" frameborder="0"></iframe>
-  <iframe src="resources/transition_from_Good.html" width="49%" height="500px" frameborder="0"></iframe>
-  <iframe src="resources/transition_from_Fair.html" width="49%" height="500px" frameborder="0"></iframe>
-  <iframe src="resources/transition_from_Poor.html" width="49%" height="500px" frameborder="0"></iframe>
-</div>
-```
-
-## Survival probability 
-
-Estimating through simulations: 
-
-::: {.columns}
-
-::: {.column width="50%"}
-![Average survival probabilities obtained with $N = 10\ 000$.](resources/probabilities_comparison.png){width=100%}
-:::
-
-::: {.column width="50%"}
-![Demographic evolution obtained with $N = 10\ 000$.](resources/demographic_comparison.png){width=100%}
-:::
-
-:::
-
-
 
 # Economic model 
 
@@ -267,86 +122,269 @@ Analytical solution inexistence $\rightarrow$ Numerical methods.
 
 [Proof](#analytical_impossibility_proof)
 
+# Setting
+
+## Formal description{#formal_description}
+
+At each period, agents draw health $H_{t}$ and living status $L_{t}$: 
+
+\begin{equation}\tag{1}
+  H_t \sim f_h(\mathcal{H}_{t-1}, \mathcal{W}_t)
+\end{equation}
+\begin{equation}\tag{2}
+  L_t \sim \mathcal{B}(p_t)\text{ | } p_{t}\equiv p_{t}(\mathcal{H}_t, \mathcal{W}_t)
+\end{equation}
+
+We can also define the two history vectors:
+\begin{equation}\tag{3}
+  \mathcal{H}_t \equiv (H_1, H_2, \dots, H_t)
+\end{equation}
+\begin{equation}\tag{4}
+  \mathcal{W}_t \equiv (W_1, W_2, \dots, W_t)
+\end{equation}
+
+[More on underlying assumptions.](#framework_assumptions)
+
+## Data {.smaller}
+
+- HRS: US micro-data on health, and age between 2002 and 2018.
+
+- Berkeley Earth Project, global average annual temperature.
+
+::: {.columns}
+
+::: {.column width="50%"}
+![Distribution of Health status across years, in the HRS data.](description_HRS.png){width=100%}
+:::
+
+::: {.column width="50%"}
+![Average annual temperature and its 95% confidence interval, in the Berkeley data.](output/description_Berkeley_data.png){width=100%}
+:::
+
+:::
+
+# Estimation method
+
+## History Simplification
+
+The general relationships: 
+
+\begin{equation}\tag{1}
+  H_t \sim f_h(\mathcal{H}_{t-1}, \mathcal{W}_t)
+\end{equation}
+\begin{equation}\tag{2}
+  L_t \sim \mathcal{B}(p_t)\text{ | } p_{t}\equiv p_{t}(\mathcal{H}_t, \mathcal{W}_t)
+\end{equation}
+
+become:
+
+\begin{equation}\tag{1.1}
+  H_t \sim f_h({H}_{t-1}, {T}_t)
+\end{equation}
+
+\begin{equation}\tag{2.1}
+  L_t \sim \mathcal{B}(p_t)\text{ | } p_{t}\equiv p_{t}({H}_t, {T}_t)
+\end{equation}
+
+## Regression strategy
+
+$$f_{h} = ?$$
+$$p_{t} = ?$$
+
+Multiple ways to estimate them: 
+
+- Simple approach,
+
+- Health Proxy: A multi-staged approach.
+
+## Health Transition {#health_transition}
+
+Sample space of Health: 
+$\Omega(H_{t}) \equiv [\![1,5]\!]$
+
+Ordered Multinomial Logit Model
+
+\begin{equation}\tag{1.1}
+  H_t \sim f_h({H}_{t-1}, {T}_t)
+\end{equation}
+
+Let $X_{H} \equiv (Age_{t}, T_{t}, H_{t-1}, Age_{t}\times T_{t}\times H_{t-1},\dots)^{T}$
+
+\begin{equation}\tag{1.2}
+  \widehat{H_{t}} \sim \widehat{f_h}({H}_{t-1}, {T}_t) = \Lambda_{O}(\widehat{\beta_H}\cdot X_{H})
+\end{equation}
+
+[More about it](#ordered_multinomial_logit_regression_details)
+
+## Living Status{#living_status}
+
+Sample space of living status: 
+$\Omega(L_{t}) \equiv \{0,1\}$
+
+Logistic regression
+
+\begin{equation}\tag{2.1}
+  L_t \sim \mathcal{B}(p_t)\text{ | } p_{t}\equiv p_{t}({H}_t, {T}_t)
+\end{equation}
+
+Let $X_{L} \equiv (Age_{t},H_{t},T_{t},Age_{t} \times H_{t}\times T_{t},\dots)^{T}$
+
+\begin{equation}\tag{2.2}
+  \widehat{L_t} \sim \mathcal{B}(\widehat{p_{t}}) | \widehat{p_t} = \Lambda  (\widehat{\beta_L}\cdot X_{L})
+\end{equation}
+
+[More about it](#logit_model_details)
+
+## Health Proxy{#health_proxy .smaller}
+
+In the submitted version, health proxy is constructed as:
+$HP_{i,t} = \text{HighBP}_{i,t} + \text{Lung}_{i,t} + \text{Heart}_{i,t} + \text{Stroke}_{i,t}$.
+
+Its estimate $\widehat{HP_{i,t}^{OLS}}$ ($\widehat{H^{I}_{i,t}}$ in text) is defined as: 
+
+$$X_{i,t}^{HP}\equiv (Age_{i,t},T_{t},Age_{i,t}\times T_{t})^{T}$$
+
+\begin{equation}
+  \widehat{HP_{i,t}^{OLS}} = \widehat{\beta^{OLS}_{HP}}\cdot X_{i,t}^{HP}
+\end{equation}
+
+Using its estimate leads to: 
+
+\begin{equation}\tag{1.4}
+  \widehat{H_{i,t}^{HP}} = \Lambda_{O} \left( \widehat{\beta_{H_{i,t}^{HP}}}\cdot X_{H_{i,t}} \right)
+    | 
+    X_{H_{i,t}} \equiv (H_{i,t-1},\widehat{HP_{i,t}^{OLS}})^{T}
+\end{equation}
+
+\begin{equation}\tag{2.4}
+  \widehat{p_{i,t}^{HP}} = \Lambda \left( \widehat{\beta_{p_{i,t}^{HP}}} \cdot X_{p_{i,t}} \right)
+    | 
+    X_{p_{i,t}} \equiv (H_{i,t},\widehat{HP_{i,t}^{OLS}})^{T}
+\end{equation}
+
+[More about it](#health_proxy_details)
+
+# Estimation results
+
+## Health Transition {.scrollable}
+
+```{=html}
+<div style="display: flex; flex-wrap: wrap; justify-content: center;">
+  <iframe src="output/transition_from_Excellent.html" width="49%" height="500px" frameborder="0"></iframe>
+  <iframe src="output/transition_from_Very Good.html" width="49%" height="500px" frameborder="0"></iframe>
+  <iframe src="output/transition_from_Good.html" width="49%" height="500px" frameborder="0"></iframe>
+  <iframe src="output/transition_from_Fair.html" width="49%" height="500px" frameborder="0"></iframe>
+  <iframe src="output/transition_from_Poor.html" width="49%" height="500px" frameborder="0"></iframe>
+</div>
+```
+
+## Survival probability {#survival_probability}
+
+Simulations yield:
+
+::: {.columns}
+
+::: {.column width="50%"}
+![Average survival probabilities obtained with $N = 1\ 00$ and fixed temperature at 0.61 °C.](output/probabilities_one_path.png){width=100%}
+:::
+
+::: {.column width="50%"}
+![Demographic evolution obtained with $N = 1\ 00$ and fixed temperature at 0.61 °C.](output/population_one_path.png){width=100%}
+:::
+
+:::
+
+[More about it](#survival_probability_details)
+
 # Numerical methods 
 
 ## Algorithms 
 
-I have different ways of solving it numerically, 
-and it does matter for the results.
+The absence of analytical solution calls for a detailed description of the numerical methods.
+The different used algorithms are: 
 
-- Pure numerical Value function iteration.
-- FOC-approximated Value function iteration.
-- Interpolated grid.
+- Pure numerical value function iteration,
+- FOC-approximated value function iteration,
+- Interpolated grid versions.
+
+Focus on: 
+
+- Performance, 
+- Policies.
+
+## Performance 
+$$\\ \\ \\$$
+
+::: {columns}
+
+::: {.column width="30%"}
+![Performance of the pure numerical algorithm.](output/numerical_pure_numerical_error.png){width=100%}
+:::
+
+::: {.column width="30%"}
+![Performance of the FOC approximated algorithm 1.](output/numerical_FOC_1_approximation_error.png){width=100%}
+:::
+
+::: {.column width="30%"}
+![Performance of the FOC approximated algorithm 2.](output/numerical_FOC_2_approximation_error.png){width=100%}
+:::
+
+:::
 
 ## Results: Consumption 
+$$\\ \\ \\$$
 
 ::: {.columns}
 
 ::: {.column width="30%"}
-![Consumption policy per age in the pure numerical algorithm.](resources/numerical_pure_numerical_consumption.png){width=100%}
+![Consumption policy per age in the pure numerical algorithm.](output/numerical_pure_numerical_consumption.png){width=100%}
 :::
 
 ::: {.column width="30%"}
-![Consumption policy per age in the FOC approximated algorithm 1.](resources/numerical_FOC_1_approximation_Consumption.png){width=100%}
+![Consumption policy per age in the FOC approximated algorithm 1.](output/numerical_FOC_1_approximation_Consumption.png){width=100%}
 :::
 
 ::: {.column width="30%"}
-![Consumption policy per age in the FOC approximated algorithm 2.](resources/numerical_FOC_2_approximation_Consumption.png){width=100%}
+![Consumption policy per age in the FOC approximated algorithm 2.](output/numerical_FOC_2_approximation_Consumption.png){width=100%}
 :::
 
 :::
 
 
 ## Results: Labour supply 
+$$\\ \\ \\$$
 
 ::: {.columns}
 
 ::: {.column width="30%"}
-![Labour supply policy per age in the pure numerical algorithm.](resources/numerical_pure_numerical_Labour Supply.png){width=100%}
+![Labour supply policy per age in the pure numerical algorithm.](output/numerical_pure_numerical_Labour Supply.png){width=100%}
 :::
 
 ::: {.column width="30%"}
-![Labour supply policy per age in the FOC approximated algorithm 1.](resources/numerical_FOC_1_approximation_Labour Supply.png){width=100%}
+![Labour supply policy per age in the FOC approximated algorithm 1.](output/numerical_FOC_1_approximation_Labour Supply.png){width=100%}
 :::
 
 ::: {.column width="30%"}
-![Labour supply policy per age in the FOC approximated algorithm 2.](resources/numerical_FOC_2_approximation_Labour Supply.png){width=100%}
+![Labour supply policy per age in the FOC approximated algorithm 2.](output/numerical_FOC_2_approximation_Labour Supply.png){width=100%}
 :::
 
 :::
 
 ## Results: Savings 
+$$\\ \\ \\$$
 
 ::: {.columns}
 
 ::: {.column width="30%"}
-![Savings policy per age in the pure numerical algorithm.](resources/numerical_pure_numerical_Savings.png){width=100%}
+![Savings policy per age in the pure numerical algorithm.](output/numerical_pure_numerical_Savings.png){width=100%}
 :::
 
 ::: {.column width="30%"}
-![Savings policy per age in the FOC approximated algorithm 1.](resources/numerical_FOC_1_approximation_Savings.png){width=100%}
+![Savings policy per age in the FOC approximated algorithm 1.](output/numerical_FOC_1_approximation_Savings.png){width=100%}
 :::
 
 ::: {.column width="30%"}
-![Savings policy per age in the FOC approximated algorithm 2.](resources/numerical_FOC_2_approximation_Savings.png){width=100%}
-:::
-
-:::
-
-## Performance 
-
-::: {.columns}
-
-::: {.column width="30%"}
-![Performance of the pure numerical algorithm.](resources/numerical_pure_numerical_error.png){width=100%}
-:::
-
-::: {.column width="30%"}
-![Performance of the FOC approximated algorithm 1.](resources/numerical_FOC_1_approximation_error.png){width=100%}
-:::
-
-::: {.column width="30%"}
-![Performance of the FOC approximated algorithm 2.](resources/numerical_FOC_2_approximation_error.png){width=100%}
+![Savings policy per age in the FOC approximated algorithm 2.](output/numerical_FOC_2_approximation_Savings.png){width=100%}
 :::
 
 :::
@@ -355,9 +393,7 @@ and it does matter for the results.
 
 - Pure numerical approach performs better in terms of precision.
 
-- Consumption FOC-approximation: estimation of $\gamma_{t}$: positively correlated with age.
-
-- Endogenous grid method could have been better, but was not implemented here. 
+- Consumption FOC-approximation allows for an estimation of $\gamma_{t}$, which is positively correlated with age.
 
 # Comparison Results
 
@@ -382,93 +418,135 @@ Four temperature trajectories:
 
 ## Health 
 
-![Average health in different temperature scenarios.](resources/average_health.png){width=70%}
+![Average health in different temperature scenarios.](output/average_health.png){width=70%}
 
 ## Survival 
 
 ::: {.columns}
 
 ::: {.column width="50%"}
-![Average survival probabilities obtained with $N = 10\ 000$.](resources/probabilities_comparison.png){width=100%}
+![Average survival probabilities for different scenarios.](output/probabilities_comparison.png){width=100%}
 :::
 
 ::: {.column width="50%"}
-![Demographic evolution obtained with $N = 10\ 000$.](resources/demographic_comparison.png){width=100%}
+![Demographic evolution for different scenarios.](output/demographic_comparison.png){width=100%}
 :::
 
 :::
 
 ## Consumption {#consumption_comparison}
 
-![Consumption policy comparison accross scenarios.](resources/comparison_Consumption.png){width=60%}
+![Consumption policy comparison accross scenarios.](output/comparison_Consumption.png){width=60%}
 
 [More about it.](#consumption_change_analytical)
 
 ## Labor Supply {#labor_supply_comparison}
 
-![Labor supply policy comparison accross scenarios.](resources/comparison_Labor.png){width=60%}
+![Labor supply policy comparison accross scenarios.](output/comparison_Labor.png){width=60%}
 
 [More about it.](#labor_change_analytical)
 
 ## Savings {#savings_comparison}
 
-![Savings policy comparison accross scenarios.](resources/comparison_Savings.png){width=60%}
+![Savings policy comparison accross scenarios.](output/comparison_Savings.png){width=60%}
 
 [More about it.](#savings_change_analytical)
 
-## Focus on Lifetime Income
+## Lifetime Income {#lifetime_income_hand_to_mouth .smaller}
 
 Defining lifetime income as: 
 
-$$Y \equiv \sum_{t = 20}^{100} \beta^t \cdot \mathbb{E}\left[l_{t}(s_{t}) \cdot z_{t}(s_{t})\right]$$
+$$Y \equiv \sum_{t = 20}^{100} \beta^{t-20} \cdot \mathbb{E}\left[l_{t}(s_{t}) \cdot z_{t}(s_{t})\right]= \sum_{t = 20}^{100} \beta^{t-20} \cdot p_{t}\cdot l_{t}(s_{t}) \cdot z_{t}(s_{t})$$
 
-::: {.columns}
+![Lifetime income comparison of hand-to-mouth individuals accross scenarios.](output/comparison_lifetime_income_hand_to_mouth.png){width=50%}
 
-::: {.column width="50%"}
-![Lifetime income comparison of hand-to-mouth individuals accross scenarios.](resources/comparison_lifetime_income_hand_to_mouth.png){width=90%}
-:::
+[More about it](#lifetime_income_rich)
 
-::: {.column width="50%"}
-![Lifetime income of rich individuals comparison accross scenarios.](resources/comparison_lifetime_income_rich.png){width=90%}
-:::
+## Comparative statics {.smaller}
 
-:::
-
-## Discussion
-
-- Overall loss driven by demographic effects. 
+**Productivity**
 
 - Productivity variation through age drives the results in a life cycle fashion (increase of distance between ages).
 
 - Productivity variation through health increases the differences between scenarios.
+    - Previous model: $z_{i,t}(h_{i,t})=\frac{1}{h_{i,t}}\in\left[0.2,1\right]$
+
+- Final productivity function, such as: 
+$$z(age, temperature, h) = \frac{1}{2}\left(\alpha_{1} \cdot z_i(age)+\alpha_{2} \cdot z_i(temperature)-\alpha_{2}\cdot\mathbb{1}(h\in b)\right)$$
+With $b \equiv \{4,5\}$
+
+**Labour disutility**
 
 - Labour disutility variation as a function of health and temperature has the same effect. 
+    - $\xi_{i,t}(h_{i,t}) = \left[1+\mathbb{1}(h_{i,t} \in \{4,5\})\right]$
+    - $\xi_{i,t}(h_{i,t}) = h_{i,t}$
 
-# Conclusion
+# Conclusion {.smaller}
 
-## Recap 
-## Results 
+$$\\ \\ \\$$
+
+- Baseline model, with lifetime income set at \$1.450 Mio, we obtain a loss 
+of approximately $110,000,
+
+- More generally, we obtain a loss of around 8\% of total income,
+
+- Weak mitigation.
+
+Limitations: 
+
+- Purely demographic effect, no adaptation, individual perspective. 
+
+Further:
+
+- More robust estimation, 
+- General Equilibrium.
 
 # References 
 
-## References - 1 
-## References - 2
+## Climate Economics
+
+- Burke et al. (2013). *Science* 341, p.1235367
+- Burke et al. (2015). *Nature* 527, 235-239  
+- Hsiang (2016). *An. Rev. Res. Econ.* 8, 43-75  
+- Carleton et al. (2022). *QJE* 137, 2037-2105
+
+## Health Economics 
+
+- Capatina (2015). *J. Health Econ.* 44, 1-12  
+- De Nardi (2019). *Rev. Econ. Stud.* 86, 1681-1726 
 
 # Appendix
 
 ## General framework assumptions{#framework_assumptions}
 
-- Independence assumption
+- Independence assumption: 
+
+$\widehat{p_{t}} \approx Pr(L_{t}=1)$
+
+$\widehat{p_{t}} \neq Pr(L_{t}=1 | L_{t-1} = 1)$
+
+Instantaneous survival probabilities $\neq$ Cumulated survival probabilities.
 
 [Go back](#formal_description)
 
 ## Health Proxy specification{#health_proxy_details}
 
-  - Motivation: Eliminate outer effects.
-  - Focus on acute health events 
-  - Final results are essentially the same.
+  - Motivation: Eliminate outer effects, and focus on acute health events,
+  - Final results are essentially the same, slighlty under those without $\widehat{HP_{i,t}^{OLS}}$.
 
 $HP_{i,t} = \text{HighBP}_{i,t} + \text{Lung}_{i,t} + \text{Heart}_{i,t} + \text{Stroke}_{i,t}$
+
+\begin{equation}
+  \widehat{HP_{i,t}^{OLS}} = \widehat{\beta^{OLS}_{HP}}\cdot X_{i,t}^{HP}
+\end{equation}
+
+$\widehat{HP_{i,t}^{\Lambda_{O}}}$ did not differ strongly from the OLS estimate.
+
+[Go back](#health_proxy)
+
+## Health Proxy plot{#health_proxy_plot}
+
+![Predicted values of health proxy for different scenarios.](output/health_proxy.png){width=70%}
 
 [Go back](#health_proxy)
 
@@ -531,7 +609,142 @@ $\widehat{p_{t}} = \Lambda(x\widehat{\beta})$
 
 [Go back](#living_status)
 
-## Analytical solution inexistence {#analytical_impossibility_proof}
+## Analytical solution inexistence {#analytical_impossibility_proof .scrollable .smaller}
+
+\subsubsection{Maximization program}
+
+$$ \max_{\{c_{t},l_{t},s_{t+1}\}_{t=1}^{100}}
+{\mathbb{E}\left[\sum_{t=1}^{100} \beta^{t}\cdot \frac{c_{t}^{1-\rho}}{1-\rho}-\xi_{t}\cdot \frac{l_{t}^{1+\varphi}}{1+\varphi}\right]}$$
+
+Subject to budget and borrowing constraints:
+
+$$c_{t} + s_{t+1} \leq l_{t}\cdot z_{t} + s_{t}\cdot(1+r_{t})$$
+
+$$s_{t+1}\geq \underline{s}, \forall t \in [\![1,100]\!]$$
+
+\subsubsection{Budget constraint binding}
+
+A first solving attempt consists in assuming that the budget constraint binds.
+We can then obtain the following expression for consumption: 
+
+$$c_{t} = l_{t}\cdot z_{t} + s_{t}\cdot(1+r_{t}) - s_{t+1}$$
+
+Plugging it into the maximization program, we obtain:
+
+$$ \max_{\{l_{t},s_{t+1}\}_{t=1}^{100}}
+{\mathbb{E}\left[\sum_{t=1}^{100} \beta^{t}\cdot \frac{\left(l_{t}\cdot z_{t} + s_{t}\cdot(1+r_{t}) - s_{t+1}\right)^{1-\rho}}{1-\rho}-\xi_{t}\cdot \frac{l_{t}^{1+\varphi}}{1+\varphi}\right]}$$
+
+The F.O.C. with respect to labor implies: 
+
+\begin{equation}
+    l_{t}^{\varphi}\cdot \xi_{t} = \left[l_{t}\cdot z_{t} + s_{t}\cdot(1+r_{t})- s_{t+1}\right]^{-\rho}\cdot z_{t}
+\end{equation}
+
+We can develop the decomposition of consumption if and only if $\rho \in \mathbb{N}$.
+Indeed, this equation is of form $x = (x-\alpha)^{\beta} \cdot z$.
+With $\beta\notin \mathbb{N}$, is a transcendental equation.
+
+\subsubsection{F.O.C. and Budget clearing}
+
+We can now try to compute the F.O.C. first, and then make use of the Budget Constraint.
+The Lagrangian function associated witht the maximization program of the agent is: 
+\begin{equation}
+    \begin{split}
+        \mathcal{L}(c_{t},l_{t},s_{t+1};\lambda_t,\gamma_{t}) &
+        = \mathbb{E}\Big[\sum_{t=1}^{100} \beta^{t}\cdot ((\frac{c_{t}^{1-\rho}}{1-\rho}-\xi_{t}\cdot\frac{l_{t}^{1+\varphi}}{1+\varphi}) \\
+        & +\lambda_{t}\cdot \left(l_{t}\cdot z_{t}+s_{t}\cdot (1+r_{t})-c_{t}-s_{t+1}\right) \\ 
+        & + \gamma_{t}\cdot \left(s_{t+1}-\underline{s}\right))\Big] \\ 
+    \end{split}
+\end{equation}
+
+The First Order Conditions are the following:
+
+$$\frac{\partial \mathcal{L}}{\partial c_{t}} = 0 \iff c_{t}^{-\rho} = \lambda_{t}$$
+
+
+$$\frac{\partial \mathcal{L}}{\partial l_{t}} = 0 \iff \lambda_{t}\cdot z_{t} = \xi_{t}\cdot l_{t}^{\varphi}$$
+
+
+$$\frac{\partial \mathcal{L}}{\partial s_{t+1}} = 0 \iff \lambda_{t} = \beta \cdot \mathbb{E}\left[\lambda_{t+1}\cdot (1+r_{t+1})\right] + \gamma_{t}$$
+
+We first note that we must obtain a closed-form solution for $c_{t}$ and $l_{t}$ to obtain 
+the optimal value of $s_{t+1}$. 
+Indeed, since $s_{t+1}$ is linear in $\mathcal{L}$, we would need to plug the closed-form
+solutions of $c_{t}$ and $l_{t}$ in the budget constraint.
+
+Replacing the expression of $\lambda_{t}$ in the two other equation yields: 
+
+\begin{equation}
+    c^{-\rho}_{t}\cdot z_{t} = \xi_{t}\cdot l_{t}^{\varphi} \iff
+        \begin{cases}
+        & c_t = \left[\frac{\xi_{t}\cdot l_{t}^{\varphi}}{z_{t}}\right]^{-\frac{1}{\rho}}\\ 
+        & l_{t} = \left[\frac{c_{t}^{-\rho}z_{t}\cdot}{\xi_{t}}\right]^{\frac{1}{\varphi}}
+    \end{cases}
+\end{equation}
+And 
+\begin{equation}
+    c^{-\rho}_{t} = \beta \cdot \mathbb{E}\left[c^{-\rho}_{t+1}\cdot (1+r_{t+1})\right] + \gamma_{t}
+\end{equation}
+
+Assuming that the budget constraint binds, it becomes, as previously seen:
+
+$$c_{t} + s_{t+1} = l_{t}\cdot z_{t} + s_{t}\cdot(1+r_{t})
+\iff 
+c_{t} = l_{t}\cdot z_{t} + s_{t}\cdot(1+r_{t}) - s_{t+1} 
+$$
+
+This leads to the following equation system: 
+
+$$
+\begin{cases}
+    & c_t = \left[\frac{\xi_{t}\cdot l_{t}^{\varphi}}{z_{t}}\right]^{-\frac{1}{\rho}} \\
+    & c_{t} = l_{t}\cdot z_{t} + s_{t}\cdot(1+r_{t}) - s_{t+1} 
+\end{cases}
+$$
+
+$$\iff$$
+$$ \left[\frac{\xi_{t}\cdot l_{t}^{\varphi}}{z_{t}}\right]^{-\frac{1}{\rho}} = l_{t}\cdot z_{t} + s_{t}\cdot(1+r_{t}) - s_{t+1} $$
+$$\iff$$
+$$ l_{t}^{-\frac{\varphi}{\rho}} \cdot \left(\frac{\xi_{t}}{z_{t}}\right)^{-\frac{1}{\rho}} = l_{t}\cdot z_{t} + s_{t}\cdot(1+r_{t}) - s_{t+1} $$
+$$\iff$$
+$$ l_{t}^{-\frac{\varphi}{\rho}} \cdot \left(\frac{z_{t}}{\xi_{t}}\right)^{\frac{1}{\rho}} - l_{t}\cdot z_{t} - s_{t}\cdot(1+r_{t}) - s_{t+1} = 0 $$
+
+This is a transcendental equation of form 
+$x^{\alpha}\cdot b - x\cdot y - c = 0$,
+which admits a solution if and only if $-\frac{\varphi}{\rho} \in \mathbb{N}$.
+This condition seems unrealistic in our context: 
+
+\begin{itemize}
+    \item $-\varphi >0$ implies that labor has a decreasing disutility,
+    which makes the maximization program absurd.
+    \item $-\rho >0$ implies a risk-loving agent, which changes 
+    drastically the framework of our model, and would require another whole 
+    interpretation.
+\end{itemize}
+
+Note that if we set $-\rho\in\mathbb{N}$ and further develop the last equation in the 
+budget constraint binding attempt, we end up with the same condition.
+
+\subsubsection{Backwards solving attempt}
+
+If we try to solve it backwards, we now go to the last period. 
+At the last period, $s_{t+1} = \underline{s}$ for sure:
+Since there is no future, 
+the agent will borrow as much as they can,
+or will at least not save anything more than what is imposed 
+by the constraint. 
+
+For simplification, let $\underline{s}$ be fixed such that: $\underline{s} = 0$.
+The new optimality condition is: 
+
+\begin{equation}
+    l_{t}^{\varphi}\cdot \xi_{t} = \left[l_{t}\cdot z_{t} + s_{t}\cdot(1+r_{t})\right]^{-\rho}\cdot z_{t}
+\end{equation}
+
+Although we simplified the term at the exponential of which 
+we have $-\rho$, this is still a transcendental equation due to the sum 
+of labor income and income coming from savings of last period, 
+and the problem remain the same.
 
 [Go back](#economic_model)
 
@@ -591,3 +804,15 @@ $$\iff$$
 $$\frac{\partial s_{t+1}}{\partial p_{t+1}} = z_{t}\cdot\frac{\partial l_{t}}{\partial p_{t+1}} l_{t}  -\frac{\partial c_{t}}{\partial p_{t+1}} > 0 $$
 
 [Go back](#savings_comparison)
+
+## Survival per health status {#survival_probability_details}
+
+![Survival probability per health status](output/extra_health_survival_plot.png){width=70%}
+
+[Go back](#survival_probability)
+
+## Lifetime Income for Rich individuals {#lifetime_income_rich}
+
+![Lifetime income of rich individuals comparison accross scenarios.](output/comparison_lifetime_income_rich.png){width=50%}
+
+[Go back](#lifetime_income_hand_to_mouth)
